# ChessAI

./: .gitignore  Makefile  README.md  TO DO  environment.yaml  hyperparameter.yaml  mapping.py  mcts.py  setup.cfg  test.py  training_game.py  utilities.py  wip.py
data/: game_data.json  hyperparameter.yaml  moves.txt
src/: mapping.py  utilities.py
src/game/: mcts.py  training_game.py
src/neural_network/: architecture.py  loss.py  metrics.py  preprocessing.py  training.py
stockfish/: README
