[metadata]
name = quentin
description = A cute little chess engine.
version = 0.0.1
author = Chris Boettner
author_email = boettnec@gmail.com
license = MIT
license_files = LICENSE.txt

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
exclude =.git,__pycache__,docs/source/conf.py,build,dist,tests
ignore = I101,D100,D101,D102,D103,D104,D105,D107,D401,E203,I900,N802,N806,N812,W503,S311,S605,S607,ISC003,ISC001,T101,T000,F541,PL123
per-file-ignores = __init__.py:F401,F403
extend_ignore = B009, E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
    
[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
check_untyped_defs = True
warn_redundant_casts = True
warn_return_any = False
warn_unused_configs = True

[isort]
profile = black
